# gx-basic-memory

./: .gitattributes  .gitignore  AGENTS.md  BUGFIX-project-delete.md  CHANGELOG.md  CLA.md  CLAUDE.md  CONTRIBUTING.md  DB-REFACTOR.md  Dockerfile  EDIT_NOTE.md  FRONTMATTER_SEARCH.md  ISSUES.md  MOVE.md  Makefile  NOTE-FORMAT.md  PROJECT_MANAGEMENT.md  README.md  RELEASE_NOTES_v0.13.0.md  SECURITY.md  alembic.ini  basic-memory.bundle  basic-memory.md  create_csv_exhibits.py  create_individual_exhibits.py  docker-compose-postgres.yml  docker-compose.yml  glama.json  justfile  legal_file_inventory.py  legal_inventory_sample.json  memory.json  pyproject.toml  reponame.bundle  server.json  skills-lock.json  tasks.md
.claude-plugin/: marketplace.json
benchmarks/: .gitignore  AGENTS.md  README.md  justfile  pyproject.toml
benchmarks/.github/workflows/: benchmark-nightly.yml  benchmark-smoke.yml
benchmarks/benchmarks/datasets/: README.md
benchmarks/benchmarks/datasets/locomo/: README.md  download.sh  source.json
benchmarks/benchmarks/datasets/longmemeval/: README.md  download.sh
benchmarks/benchmarks/results/: matrix-v1.2-summary.md  matrix-v2-summary.md  structured-ingestion-findings.md
benchmarks/benchmarks/synthetic/: queries.json
benchmarks/benchmarks/synthetic/docs/: agent-memory.md  auth-memory.md  sync-memory.md
benchmarks/docs/: benchmarks.md  write-load-benchmark.md
benchmarks/scripts/: write_load_bench.py
benchmarks/src/basic_memory_benchmarks/: __init__.py  __main__.py  cli.py  exceptions.py  fairness.py  models.py  runner.py  utils.py
benchmarks/src/basic_memory_benchmarks/converters/: __init__.py  convomem_to_corpus.py  locomo_to_corpus.py  longmemeval_to_corpus.py  structure_corpus.py
benchmarks/src/basic_memory_benchmarks/datasets/: convomem.py  locomo.py  locomo_audit.py  longmemeval.py
benchmarks/src/basic_memory_benchmarks/llm/: __init__.py  runners.py
benchmarks/src/basic_memory_benchmarks/providers/: __init__.py  base.py  baseline_fullcontext.py  baseline_grep.py  bm_cloud.py  bm_local.py  mem0_local.py  supermemory_local.py  zep_reference.py
benchmarks/src/basic_memory_benchmarks/reporting/: __init__.py  artifacts.py  compare.py
benchmarks/src/basic_memory_benchmarks/scoring/: diagnose.py  judge.py  qa.py  retrieval.py  review.py
benchmarks/test-int/: test_compare_regression.py  test_runner_orchestration.py
benchmarks/tests/: test_diagnose.py  test_fairness.py  test_manifest_schema.py  test_qa_scoring.py  test_retrieval_metrics.py  test_review.py  test_runner_grouped.py  test_structure_corpus.py
benchmarks/tests/converters/: test_convomem_converter.py  test_locomo_audit_corrections.py  test_longmemeval_converter.py
benchmarks/tests/llm/: test_runners.py
benchmarks/tests/providers/: test_baseline_providers.py  test_bm_local_provider.py  test_mem0_normalization.py  test_supermemory_provider.py
claude-output/: claude_issue_fix_log_75.txt  claude_output_75.txt  claude_prompt_75.txt
data/: daily_metrics.json
db/: schema.sql
docs/: ARCHITECTURE.md  CLI Reference.md  DOMAIN_MODEL.md  Docker.md  ENGINEERING_STYLE.md  Getting Started with Basic Memory.md  NOTE-FORMAT.md  SPEC-PER-PROJECT-ROUTING.md  User Guide.md  Welcome to Basic memory.md  ai-assistant-guide-extended.md  auto-bm-webhook-test.md  character-handling.md  cloud-cli.md  cloud-semantic-search-value.md  litellm-provider.md  manual-pages.md  mcp-ui-bakeoff-instructions.md  obsidian-test.md  post-v0.18.0-test-plan.md  semantic-search-test-log.md  semantic-search.md  testing-coverage.md
examples/: 20240101-basic-memory.md
installer/: Basic.icns  README.md  installer.py  setup.py
legal_inventory_main/: basic_memory_inventory_20250730_101521.json
scripts/: bm_bossbot_status.py  build_skills_dist.py  daily_report.py  edit-issue-labels.sh  generate_infographic.py  generate_legal_inventory.py  generate_pr_infographic.py  migrate_to_folders.py  requirements.txt  testmon_cache.py  update_versions.py  validate_claude_plugin.py  validate_codex_plugin.py  validate_hermes_plugin.py  validate_skills.py
skills/: CLAUDE.md  DEVELOPMENT.md  README.md  justfile  skills-lock.json
test-int/: BENCHMARKS.md  compare_search_benchmarks.py  conftest.py  test_db_wal_mode.py  test_disable_permalinks_integration.py  test_embedding_status_vec0.py  test_postgres_dispose_cycle.py  test_search_performance_benchmark.py  test_sync_performance_benchmark.py
tests/: .coverage  README.md  conftest.py  test_activity_schemas.py  test_activity_service.py  test_alembic_env.py  test_architecture_boundaries.py  test_basic_memory.py  test_claude_plugin_hooks.py  test_codex_plugin_package.py  test_coerce.py  test_config.py  test_config_load_side_effects.py  test_deps.py  test_entity_repository.py  test_entity_service.py  test_mcp_server.py  test_memory_service.py  test_memory_service_observations.py  test_migration_loop.py  (+21 more)
(+1247 files in other folders)
