[project]
name = "basic-memory"
version = "0.1.0"
description = "Local-first knowledge management combining Zettelkasten with knowledge graphs"
readme = "README.md"
requires-python = ">=3.12.1"
license = { text = "AGPL-3.0-or-later" }
dependencies = [
    "sqlalchemy>=2.0.0",
    "pyyaml>=6.0.1",
    "rich>=13.7.0",
    "typer>=0.9.0",
    "aiosqlite>=0.20.0",
    "greenlet>=3.1.1",
    "pydantic[email,timezone]>=2.10.3",
    "icecream>=2.1.3",
    "mcp>=1.1.0",
    "pydantic-settings>=2.6.1",
    "loguru>=0.7.3",
    "pyright>=1.1.390",
    "basic-foundation",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.4",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.1.6",
]


[project.scripts]
basic-memory = "basic_memory.cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
pythonpath = [
    "src",
    "tests"
]
addopts = "--cov=basic_memory --cov-report term-missing -ra -q"
testpaths = ["tests"]
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"
# Add this line to ensure pytest-mock is loaded
#required_plugins = ["pytest-asyncio", "pytest-cov", "pytest-mock"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.uv]
dev-dependencies = [
    "icecream>=2.1.3",
]

[tool.uv.sources]
basic-foundation = { path = "../basic-foundation", editable = true }

[tool.pyright]
include = [
    "src/",
]
exclude = [
    "**/__pycache__",
]
ignore = [
    "test/",
]
defineConstant = { DEBUG = true }
reportMissingImports = "error"
reportMissingTypeStubs = false
pythonVersion = "3.12"
